--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
-      <h1 class="header__title text centered-vertically">Научиться учиться</h1>
-      <h2 class="header__subtitle text">
+      <h1 class="header__title text">Научиться учиться</h1>
+      <p class="header__subtitle text">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link text link" href="#">Узнать</a>
-      </h2>
+        <a class="header__link text link" href="#">Узнать&rarr;</a>
+      </p>
       <div class="header__square-pic"></div>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка, Фёдор Решетников">
     </header>
@@ -45,139 +45,140 @@
       </section>
       <section class="digits">
         <h2 class="section-title text centered-horizontally">Цифры и факты</h2>
-        <h3 class="digits__section-subtitle section-subtitle text centered-horizontally">Про учёбу и мозг</h3>
+        <p class="digits__section-subtitle section-subtitle text centered-horizontally">Про учёбу и мозг</p>
         <ul class="table list centered-horizontally">
           <li class="table__cell">
-            <h4 class="table__heading text">86 миллиардов</h4>
+            <h3 class="table__heading text">86 миллиардов</h3>
             <p class="table__text text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">2.1 миллиарда</h4>
+            <h3 class="table__heading text">2.1 миллиарда</h3>
             <p class="table__text text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">1000 терабайт</h4>
+            <h3 class="table__heading text">1000 терабайт</h3>
             <p class="table__text text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">500 триллионов</h4>
+            <h3 class="table__heading text">500 триллионов</h3>
             <p class="table__text text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">420 миллионов</h4>
+            <h3 class="table__heading text">420 миллионов</h3>
             <p class="table__text text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">17–20 лет</h4>
+            <h3 class="table__heading text">17–20 лет</h3>
             <p class="table__text text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">1885 год</h4>
+            <h3 class="table__heading text">1885 год</h3>
             <p class="table__text text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading text">1889 год</h4>
+            <h3 class="table__heading text">1889 год</h3>
             <p class="table__text text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title text centered-horizontally">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle text">Выучить и не забыть.</h3>
-        <a class="feynman__link link text" href="#">Подробнее</a>
+        <p class="feynman__subtitle text">Выучить и не забыть.</p>
+        <a class="feynman__link link text" href="#">Подробнее&rarr;</a>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark text centered-horizontally">Принципы обучения</h2>
-        <h3 class="kaufman__section-subtitle section-subtitle section-subtitle_theme_dark text centered-horizontally">от Джоша Кауфмана</h3>
-        <ul class="table table__theme_dark list centered-horizontally">
+        <p class="kaufman__section-subtitle section-subtitle section-subtitle_theme_dark text centered-horizontally">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark list centered-horizontally">
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">1</h4>
-            <p class="table__text text">Выберите привлекательный проект.</p>
+            <h3 class="table__heading table__heading_theme_dark text">1</h3>
+            <p class="table__text table__text_theme_dark text">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">2</h4>
-            <p class="table__text text">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h3 class="table__heading table__heading_theme_dark text">2</h3>
+            <p class="table__text table__text_theme_dark text">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">3</h4>
-            <p class="table__text text">Определите целевой уровень мастерства.</p>
+            <h3 class="table__heading table__heading_theme_dark text">3</h3>
+            <p class="table__text table__text_theme_dark text">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">4</h4>
-            <p class="table__text text">Разбейте навык на элементы.</p>
+            <h3 class="table__heading table__heading_theme_dark text">4</h3>
+            <p class="table__text table__text_theme_dark text">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">5</h4>
-            <p class="table__text text">Приготовьте всё необходимое для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark text">5</h3>
+            <p class="table__text table__text_theme_dark text">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">6</h4>
-            <p class="table__text text">Устраните препятствия для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark text">6</h3>
+            <p class="table__text table__text_theme_dark text">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">7</h4>
-            <p class="table__text text">Выделите специальное время для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark text">7</h3>
+            <p class="table__text table__text_theme_dark text">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">8</h4>
-            <p class="table__text text">Создайте быстрые петли обратной связи.</p>
+            <h3 class="table__heading table__heading_theme_dark text">8</h3>
+            <p class="table__text table__text_theme_dark text">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">9</h4>
-            <p class="table__text text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <h3 class="table__heading table__heading_theme_dark text">9</h3>
+            <p class="table__text table__text_theme_dark text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading text">10</h4>
-            <p class="table__text text">Уделяйте внимание количеству и скорости.</p>
+            <h3 class="table__heading table__heading_theme_dark text">10</h3>
+            <p class="table__text table__text_theme_dark text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns centered-horizontally">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author text">&copy; Виктор Абанькин</p>
         </div>
-        <div class="footer__column_content_info">
-          <h2 class="footer__column-heading text">O Практикуме</h2>
-          <ul class="footer__column-links list">
-            <li>
-              <a class="footer__column-link text" href="#">Главная</a>
-            </li>
-            <li>
-              <a class="footer__column-link text" href="#">Концепция</a>
-            </li>
-            <li>
-              <a class="footer__column-link text" href="#">Наставники</a>
-            </li>
-          </ul>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading text">O Практикуме</h3>
+          <nav>
+            <ul class="footer__column-links list">
+              <li>
+                <a class="footer__column-link text" href="#">Главная</a>
+              </li>
+              <li>
+                <a class="footer__column-link text" href="#">Концепция</a>
+              </li>
+              <li>
+                <a class="footer__column-link text" href="#">Наставники</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <div class="footer__column_content_social">
-          <h2 class="footer__column-heading text">Соцсети</h2>
-          <ul class="footer__column-links list">
-            <li>
-              <a class="footer__column-link text" href="#">
-                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Facebook">
-                Facebook
-              </a>
-            </li>
-            <li>
-              <a class="footer__column-link text" href="#">
-                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтакте">
-                ВКонтакте
-              </a>
-            </li>
-            <li>
-              <a class="footer__column-link text" href="#">
-                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Instagram">
-                Instagram
-              </a>
-            </li>
-          </ul>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading text">Соцсети</h3>
+          <nav>
+            <ul class="footer__column-links list">
+              <li>
+                <a class="footer__column-link text" href="#">
+                  <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Facebook">Facebook
+                </a>
+              </li>
+              <li>
+                <a class="footer__column-link text" href="#">
+                  <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтакте">ВКонтакте
+                </a>
+              </li>
+              <li>
+                <a class="footer__column-link text" href="#">
+                  <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Instagram">Instagram
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
     </footer>
