--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="Сайт о cовременных и эффективных подходах к обучению">
   <meta name="keywords" content="эффективное обучение, Яндекс Практикум">
   <meta name="author" content="Виктор Абанькин">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
