--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link text link" href="#">Узнать&rarr;</a>
       </p>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка, Фёдор Решетников">
     </header>
     <main class="content">
