Implemented techniques section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,37 @@
           </div>
         </div>
       </section>
+      <section class="techniques centered-horizontally">
+        <h2 class="section-title text centered-horizontally">Техники обучения</h2>
+        <p class="section-subtitle text centered-horizontally">Пять практик от Барбары Оакли</p>
+        <ul class="cards list centered-horizontally">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png">
+            <h3 class="cards__title text">Два вида внимания</h3>
+            <p class="cards__description text">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png">
+            <h3 class="cards__title text">Recall</h3>
+            <p class="cards__description text">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png">
+            <h3 class="cards__title text">Интерливинг</h3>
+            <p class="cards__description text">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png">
+            <h3 class="cards__title text">Вопросы</h3>
+            <p class="cards__description text">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png">
+            <h3 class="cards__title text">Иллюзия компетентности</h3>
+            <p class="cards__description text">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
       <section class="digits">
         <h2 class="section-title text centered-horizontally">Цифры и факты</h2>
         <p class="digits__section-subtitle section-subtitle text centered-horizontally">Про учёбу и мозг</p>
