--- a/index.html
+++ b/index.html
@@ -47,31 +47,68 @@
         <p class="section-subtitle text centered-horizontally">Пять практик от Барбары Оакли</p>
         <ul class="cards list centered-horizontally">
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Книга в руках">
             <h3 class="cards__title text">Два вида внимания</h3>
             <p class="cards__description text">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Античная скульптура мальчика">
             <h3 class="cards__title text">Recall</h3>
             <p class="cards__description text">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Станция метро Oculus">
             <h3 class="cards__title text">Интерливинг</h3>
             <p class="cards__description text">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png">
+            <img class="cards__image" src="./images/cards-question.png" alt="Муниципальная библиотека города Штуттгарт в Германии">
             <h3 class="cards__title text">Вопросы</h3>
             <p class="cards__description text">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Несколько книг на ладони">
             <h3 class="cards__title text">Иллюзия компетентности</h3>
             <p class="cards__description text">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title text centered-horizontally">Видео на TED</h2>
+        <p class="section-subtitle text centered-horizontally">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe
+            id="ytplayer"
+            class="video__iframe"
+            type="text/html"
+            src="https://www.youtube.com/embed/5MgBikgcWnY"
+            allowfullscreen></iframe>
+          <iframe
+            id="ytplayer"
+            class="video__iframe"
+            type="text/html"
+            src="https://www.youtube.com/embed/arj7oStGLkU"
+            allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns centered-horizontally">
+          <h2 class="two-columns__brief text">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph text">
+              С детства Барбаре не давалась математика.
+              Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
+              Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title text centered-horizontally">Метод Фейнмана</h2>
+        <p class="feynman__subtitle text">Выучить и не забыть.</p>
+        <a class="feynman__link link text" href="#">Подробнее&rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title text centered-horizontally">Цифры и факты</h2>
@@ -112,11 +149,6 @@
             <p class="table__text text">Открытие условного рефлекса</p>
           </li>
         </ul>
-      </section>
-      <section class="feynman">
-        <h2 class="feynman__title text centered-horizontally">Метод Фейнмана</h2>
-        <p class="feynman__subtitle text">Выучить и не забыть.</p>
-        <a class="feynman__link link text" href="#">Подробнее&rarr;</a>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark text centered-horizontally">Принципы обучения</h2>
