Implemented khan section

--- a/index.html
+++ b/index.html
@@ -78,13 +78,11 @@
         <p class="section-subtitle text centered-horizontally">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe
-            id="ytplayer"
             class="video__iframe"
             type="text/html"
             src="https://www.youtube.com/embed/5MgBikgcWnY"
             allowfullscreen></iframe>
           <iframe
-            id="ytplayer"
             class="video__iframe"
             type="text/html"
             src="https://www.youtube.com/embed/arj7oStGLkU"
@@ -149,6 +147,27 @@
             <p class="table__text text">Открытие условного рефлекса</p>
           </li>
         </ul>
+      </section>
+      <section class="khan">
+        <div class="khan__container centered-horizontally">
+          <p class="khan__author text">Салман Хан</p>
+          <h2 class="khan__title text">Весь мир — школа</h2>
+          <figure class="zero-margins">
+            <blockquote class="khan__quote">
+              <p class="text">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+              Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
+              которые приносят успех в школе, карьере и жизни.</p>
+            </blockquote>
+            <figcaption>
+              <p class="khan__quote-author text">Джордж Лукас</p>
+              <p class="khan__quote-author-subline text">Кинорежиссер, продюсер</p>
+            </figcaption>
+          </figure>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="">
+            <a class="khan__buy-link text link" href="#">Купить книгу&rarr;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark text centered-horizontally">Принципы обучения</h2>
