Implemented resources section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </figcaption>
           </figure>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Весь мир - школа">
             <a class="khan__buy-link text link" href="#">Купить книгу&rarr;</a>
           </div>
         </div>
@@ -214,7 +214,33 @@
             <p class="table__text table__text_theme_dark text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title text centered-horizontally">Полезные ресурсы</h2>
+        <p class="section-subtitle text centered-horizontally">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone list centered-horizontally">
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
