--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
       <section class="video">
         <h2 class="section-title text centered-horizontally">Видео на TED</h2>
         <p class="section-subtitle text centered-horizontally">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe
-            class="video__iframe"
-            type="text/html"
-            src="https://www.youtube.com/embed/5MgBikgcWnY"
-            allowfullscreen></iframe>
-          <iframe
-            class="video__iframe"
-            type="text/html"
-            src="https://www.youtube.com/embed/arj7oStGLkU"
-            allowfullscreen></iframe>
+        <ul class="video__iframes list">
+          <li class="video__item">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              allowfullscreen></iframe>
+          </li>
+          <li class="video__item">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              allowfullscreen></iframe>
+          </li>
         </div>
       </section>
       <section class="oakley">
@@ -152,7 +154,7 @@
         <div class="khan__container centered-horizontally">
           <p class="khan__author text">Салман Хан</p>
           <h2 class="khan__title text">Весь мир — школа</h2>
-          <figure class="zero-margins">
+          <figure class="khan__quote-container">
             <blockquote class="khan__quote">
               <p class="text">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
               Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
@@ -222,22 +224,22 @@
         <ul class="resources__logo-zone list centered-horizontally">
           <li>
             <a class="resources__link" href="#">
-              <img class="resources__logo" src="./images/logo/resources-arzamas.svg">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas">
             </a>
           </li>
           <li>
             <a class="resources__link" href="#">
-              <img class="resources__logo" src="./images/logo/resources-n1.svg">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1">
             </a>
           </li>
           <li>
             <a class="resources__link" href="#">
-              <img class="resources__logo" src="./images/logo/resources-strelka.svg">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип STRELKA">
             </a>
           </li>
           <li>
             <a class="resources__link" href="#">
-              <img class="resources__logo" src="./images/logo/resources-polka.svg">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полка">
             </a>
           </li>
         </ul>
